# msdf-atlas-gen

./: .editorconfig  .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  rename.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
src/: index.ts  msdf-atlas-gen.ts
